implemented registration functions for project, file and package types, added cgilazide package
 SVN 6282@trunk

--- a/components/cgi/README
+++ b/components/cgi/README
@@ -1,6 +1,11 @@
 cgi
 
 With the cgimodules.pas unit you can easily create cgi applications with
-datamodules and edit them in the IDE.
+datamodules.
+
+In the IDE sub directory you can find a design time package, which will install
+some helpful IDE features like 'CGI Application' and 'CGI Module'.
+
+
 
 
