--- a/ideintf/README
+++ b/ideintf/README
@@ -1,2 +1,1 @@
-This directory contains the IDE interfaces for experts/plugins, that don't fit
-into one of the other categories.
+This directory contains the IDE interfaces for experts/plugins.
