--- a/languages/lazaruside.po
+++ b/languages/lazaruside.po
@@ -3,7 +3,7 @@ msgid "Enter translation language"
 msgstr ""
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.3 beta"
+msgid "0.9.4 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisleaveemptyfo
@@ -4448,6 +4448,10 @@ msgstr ""
 
 #: lazarusidestrconsts:rslanguagespanish
 msgid "Spanish"
+msgstr ""
+
+#: lazarusidestrconsts:rslanguagespanishutf
+msgid "Spanish (UTF8)"
 msgstr ""
 
 #: lazarusidestrconsts:rslanguagefrench
