--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -246,7 +246,7 @@ msgid "(unknown macro: %s)"
 msgstr "(%s :מקרו לא מוכר)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.3 beta"
+msgid "0.9.4 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -5675,6 +5675,10 @@ msgstr ""
 
 #: lazarusidestrconsts:rslanguagespanish
 msgid "Spanish"
+msgstr ""
+
+#: lazarusidestrconsts:rslanguagespanishutf
+msgid "Spanish (UTF8)"
 msgstr ""
 
 #: lazarusidestrconsts:lisuidsrc
