--- a/languages/lazaruside.itiso.po
+++ b/languages/lazaruside.itiso.po
@@ -245,7 +245,7 @@ msgid "(unknown macro: %s)"
 msgstr "(macro sconosciuta: %s)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.3 beta"
+msgid "0.9.4 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -5675,6 +5675,10 @@ msgstr "Barra spaziatrice"
 #: lazarusidestrconsts:rslanguagespanish
 msgid "Spanish"
 msgstr "Spagnolo"
+
+#: lazarusidestrconsts:rslanguagespanishutf
+msgid "Spanish (UTF8)"
+msgstr ""
 
 #: lazarusidestrconsts:lisuidsrc
 msgid "Src"
