--- a/languages/lazaruside.ruutf.po
+++ b/languages/lazaruside.ruutf.po
@@ -235,7 +235,7 @@ msgid "(unknown macro: %s)"
 msgstr "(неизвестный макрос: %s)"
 
 #: lazarusidestrconsts:lislazarusversionstring
-msgid "0.9.3 beta"
+msgid "0.9.4 beta"
 msgstr ""
 
 #: lazarusidestrconsts:lisa2pchooseanexistingfile
@@ -5665,6 +5665,10 @@ msgstr "Кнопка пробел"
 #: lazarusidestrconsts:rslanguagespanish
 msgid "Spanish"
 msgstr "Испанский"
+
+#: lazarusidestrconsts:rslanguagespanishutf
+msgid "Spanish (UTF8)"
+msgstr ""
 
 #: lazarusidestrconsts:lisuidsrc
 msgid "Src"
